[project]
name = "agentic-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "pydantic>=2.11.7",
    "pydantic-ai",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "ruff>=0.12.5",
]


[tool.ruff]
exclude = [
    ".ruff_cache",
    ".git",
    ".ipynb_checkpoints",
    ".venv",
    ".vscode",
    "notebooks"
]
extend-include = []
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["ANN204", "ANN401", "E731", "D", "DTZ005", "BLE001","B008", "CPY001","COM812", "ERA001", "EM101","EM102", "FA","FBT", "G004", "UP", "TRY", "PTH123","ISC001" ]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.uv.sources]
pydantic-ai = { git = "https://github.com/pydantic/pydantic-ai.git", rev = "refs/pull/2365/head" }
